Follow Track constraint for 2D Track points depends on global coordinates regardless of parenting #76438

Closed
opened 2020-05-05 10:56:04 +02:00 by Konstantins Visnevskis · 8 comments

System Information
Operating system: Win7x64, Ubuntu
Blender Version
Broken: 2.83, 2.9
Worked: Never (2.8+)

Short description of error
Track points get projection distorted when camera not at 0,0 in plane perpendicular to camera view vector in global coordinates.
That in itself might not be a bug, depending on design, but the same happens if the track points are parented to the camera. Meaning - 2D track point camera setup can't be moved away from the world origin except along the camera view axis.

Exact steps for others to reproduce the error
track.blend

  • Open the file (the track points are parented to the camera)
  • Move the camera -> track points projection takes into account global coordinates
**System Information** Operating system: Win7x64, Ubuntu **Blender Version** Broken: 2.83, 2.9 Worked: Never (2.8+) **Short description of error** Track points get projection distorted when camera not at 0,0 in plane perpendicular to camera view vector in global coordinates. That in itself might not be a bug, depending on design, but the same happens if the track points are parented to the camera. Meaning - 2D track point camera setup can't be moved away from the world origin except along the camera view axis. **Exact steps for others to reproduce the error** [track.blend](https://archive.blender.org/developer/F8513597/track.blend) - Open the file (the track points are parented to the camera) - Move the camera -> track points projection takes into account global coordinates

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This is weird, if I look from top ortho vs from camera it is very inconsistent.
Projecting points on surface helps though.

This is weird, if I look from top ortho vs from camera it is very inconsistent. Projecting points on surface helps though.

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2020-05-08 16:52:59 +02:00

This is a mistake of calculation of distance from object to viewplane which is used to place markers in 3d space when there is no explicit projection object.

Should be simple to resolve.

This is a mistake of calculation of distance from object to viewplane which is used to place markers in 3d space when there is no explicit projection object. Should be simple to resolve.

This issue was referenced by 672a0af081

This issue was referenced by 672a0af081cf80b5f8d4ed3c5ea79be14480f3e1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76438
No description provided.