Fix T76438: Wrong calculation of depth for Follow Track constraint

Need to transform direction as such, without adding translation component
of the camera matrix.